--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@vueform/toggle": "^2.1.3",
+    "@vuepic/vue-datepicker": "^3.6.7",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.22.0",
@@ -18,6 +20,7 @@
     "sass-loader": "^13.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
+    "vue3-timepicker": "^1.0.0-beta.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
